welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: value a
      faireMotif(a:Color, b:Color, c:Color, d:Color)
                 ^MethodsPicture:5: error: not found: value b
      faireMotif(a:Color, b:Color, c:Color, d:Color)
                          ^MethodsPicture:5: error: not found: value c
      faireMotif(a:Color, b:Color, c:Color, d:Color)
                                   ^MethodsPicture:5: error: not found: value d
      faireMotif(a:Color, b:Color, c:Color, d:Color)
                                            ^MethodsPicture:25: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
  setCouleurBrosse()
                  ^